Fixed bug with content overflow

--- a/src/Fluid/Stylesheets/styles/sections/editor.scss
+++ b/src/Fluid/Stylesheets/styles/sections/editor.scss
@@ -16,7 +16,7 @@ div.editor {
 
   &>div {
     height: 100%;
-    padding: 42px 0 0 306px;
+    padding: 43px 0 135px 306px;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
